# hotel_guest_management

./: CMakeLists.txt  customerdata.csv  main  random.cpp
includes/: events.hpp  globals.hpp  graphics.hpp  helper.hpp
includes/class/: AddWindow.hpp  Customer.hpp  CustomerInfo.hpp  Date.hpp  DateEntry.hpp  GuestStack.hpp  GuestTreeView.hpp  LoginWindow.hpp  MainWindow.hpp  NewsListBox.hpp
resources/: main.ui  main.ui~
src/class/: AddWindow.cpp  Customer.cpp  CustomerInfo.cpp  Date.cpp  DateEntry.cpp  GuestStack.cpp  GuestTreeView.cpp  LoginWindow.cpp  MainWindow.cpp  NewsListBox.cpp  events.cpp  graphics.cpp
src/helper/: events.cpp  globals.cpp  graphics.cpp  helper.cpp
src/main/: main.cpp
